# Robot

./: .gitignore  README.md
RobotArm-master/: pyproject.toml
RobotArm-master/doc/: grbl中文参数.txt
RobotArm-master/robotarm/: __init__.py  capture_60.py  utils.py  vlm.py
RobotArm-master/robotarm/resources/layouts/: jupiter.yaml
RobotArm-master/robotarm/resources/scores/: dial_8890.yaml
RobotArm-master/tests/: test_capture_60.py  test_capture_pipe.py  test_dial_8890.py  test_dpad.py  test_layout.py
robotarm/: capture.py  capture_pipe.py  cli.py  controller.py  logging_utils.py  observer.py  performer.py
robotarm/resources/configs/: default.yaml
robotarm/resources/scores/: dial_8821.yaml
tests/: test_arm_basic.py  test_config_buttons.py  test_process_video.py  test_vlm_standalone.py
